4.5/_end-user/search/show-data-labels.md
---
title: [Additional chart options]
keywords: tbd
last_updated: tbd
summary: "You can configure charts to show the y-axis data values.
"
sidebar: mydoc_sidebar
permalink: /:collection/:path.html
---
Some charts have additional options under **Configuration Options** that are
covered in each chart type topic.


## Show data labels

To show data labels:

1. While viewing your answer as a chart, click **Edit chart configuration**.

     ![]({{ site.baseurl }}/images/edit_chart_configuration_bar.png "Edit chart configuration icon")

2. Select **Show Data Labels**.

     ![]({{ site.baseurl }}/images/show_data_labels.png "Toggle on Show Data Labels")

## Add regression line

1. While viewing your answer as a chart, click **Edit chart configuration**.
2. Select **Show regression line**.

     ![]({{ site.baseurl }}/images/regression-line.png)

## Display gridlines

Charts with X and Y axis can display gridlines. To display them:

1. Choose **Edit chart configuration**.
2. Select one or both of the gridline options.

     ![]({{ site.baseurl }}/images/chart-gridline.png)

## Lock the chart

You can use the lock icon to prevent ThoughtSpot from recommending other chart
options or configurations. For example, you want a line chart, you can lock that
display and stop TS from recommending an alternative visualization such as a
funnel/pie/column and so forth. A lock applies for all subsequent answers that
have the same column set. 
